--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
 body{
-    background: grey;
+    //background: grey;
+    background-image: url('./doom.jpg');
 }
